--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ body {
   margin: 20px 50px;
 }
 
-.section{
+.section {
   margin: 20px 0 0 0;
   display: flex;
   justify-content: space-between;
@@ -63,5 +63,38 @@ body {
 }
 
 .main-image img {
-  width:100%;
+  width: 100%;
+}
+
+/* main {
+  display: flex;
+  flex-direction: row;
+
+} */
+
+.feed-container {
+  width: 100%;
+  height: 100vh;
+  background-color: f8f8f8;
+  padding: 20px;
+}
+
+.feed {
+  display: flex;
+  flex-wrap: wrap;
+
+}
+
+.map {
+  width: 50%;
+}
+
+.card {
+  padding: 10px;
+
+}
+
+.card img {
+  max-width: 250px;
+  border-radius: 20px;
 }
