--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
 
+
 html,
 body {
   padding: 0;
@@ -10,17 +11,16 @@ body {
 .nav {
   position: sticky;
   z-index: 100;
-  box-shadow: rgb(0 0 0 / 12%) 0 6px 16px;
+  box-shadow: rgb(0 0 0 /12%) 0 6px 16px;
   padding: 30px;
 }
 
 .logo {
   width: 130px;
   height: 40px;
-  background-image: url(../images/airbnb-logo.png);
+  background-image: url('../images/airbnb-logo.png');
   background-size: 130px;
 }
-
 
 .container {
   display: flex;
@@ -41,9 +41,9 @@ body {
 .price-box {
   width: 35%;
   height: 250px;
-  border: 1px solid rgb(221, 221, 221);
+  border: 1px solid rgb(221,221,221);
   border-radius: 12px;
-  box-shadow: rgb(0 0 0 /12%) 0 6px 16px;
+  box-shadow: rgb( 0 0 0 / 12%) 0 6px 16px;
   padding: 24px;
   display: flex;
   flex-direction: column;
@@ -54,28 +54,22 @@ body {
   width: 90%;
   padding: 15px;
   border-radius: 10px;
-  color: rgb(225, 255, 255);
+  color: rgb(255,255,255);
   text-align: center;
-  background: linear-gradient(135deg, rgb(225, 56, 92) 20%, rgb(189, 30, 89));
+  background: linear-gradient(135deg, rgb(255,56,92) 20%, rgb(189,30,89));
 }
 
 .images-section {
   display: flex;
   border-radius: 10px;
   overflow: hidden;
-  max-height: 340px;
-}
-
-.sub-images-section {
-  display: flex;
-  flex-wrap: wrap;
-  overflow: hidden;
+  max-height: 455px;
 }
 
 .main-image {
   width: 50%;
-  max-height: 570px;
   overflow: hidden;
+  max-height: 840px;
 }
 
 .main-image img {
@@ -90,14 +84,13 @@ body {
 .feed-container {
   width: 50%;
   height: 100vh;
-  background-color: f8f8f8;
+  background-color: #f8f8f8;
   padding: 20px;
 }
 
 .feed {
   display: flex;
   flex-wrap: wrap;
-
 }
 
 .map {
@@ -106,7 +99,6 @@ body {
 
 .card {
   padding: 10px;
-
 }
 
 .card img {
@@ -120,6 +112,7 @@ body {
 
 .image img {
   width: 100%;
+  max-height: 270px;
 }
 
 .sub-images-section {
@@ -127,4 +120,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   overflow: hidden;
+}
+
+.line {
+  border: 1px solid grey;
 }
